--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"/>
     <script src="https://upload-widget.cloudinary.com/global/all.js" type="text/javascript"></script>
-    <title>Personal Coach™</title>
+    <title>Costco Roscoe's Liquor™</title>
   </head>
   <body>
     <div id="root">
