--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="manifest" href="/Bloomington-Mini-Mart/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.0/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" />
-    <title>Shell™ Gas Retail</title>
+    <title>Bloomington-Mini-Mart™</title>
     <script defer="defer" src="/Bloomington-Mini-Mart/static/js/main.2a9a6572.js"></script>
     <link href="/Bloomington-Mini-Mart/static/css/main.bdfbf878.css" rel="stylesheet" />
   </head>
